# waveshare-grpc-interface

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  gradlew  settings.gradle.kts
.github/workflows/: ci.yml
proto/waveshare/v1/: waveshare_commander.proto
